<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/main_menu_main_text"
        android:text="@string/app_name"
        android:textSize="46dp"
        android:layout_marginTop="24dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/start_btn"
        android:text="@string/menu_start"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginTop="36dp"
        android:textSize="32sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/account_btn"
        android:text="@string/menu_account"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginTop="28dp"
        android:textSize="32sp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/reiting_btn"
        android:text="@string/menu_reiting"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginTop="28dp"
        android:textSize="32sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/pirate"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
