<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="42dp"
        android:text="@string/enter_email"
        android:id="@+id/enter_email_tv"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/email_et"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="42dp"
        android:text="@string/enter_pass"
        android:id="@+id/enter_pass_tv" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/pass_et"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">


        <Button
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="26sp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="18dp"
            android:id="@+id/sign_in_btn"
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textSize="26sp"
            android:layout_marginTop="24dp"
            android:id="@+id/create_user_btn"
            android:layout_marginLeft="18dp"
            android:background="?android:attr/selectableItemBackground" />
    </LinearLayout>





</LinearLayout>
