<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_game_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/place_ships_tv"
        android:textSize="24sp"
        android:text="@string/place_your_ships"
        android:textColor="@color/app_name_in_menu"
        android:gravity="center"
        android:layout_marginTop="22dp"/>

    <GridLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recyclerView"
        android:layout_marginBottom="36dp"
        android:columnCount="4">
        <ImageButton
            android:id="@+id/one_ship_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_column="0"
            android:layout_marginLeft="22dp"
            android:background="@drawable/firstship"
            />
        <ImageButton
            android:id="@+id/two_ship_btn"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_column="1"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/secondship_unselected"/>
        <ImageButton
            android:id="@+id/three_ship_btn"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_column="2"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/thirdship_unselected"/>
        <ImageButton
            android:id="@+id/fourth_ship_btn"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_column="3"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/forthship_unselected"/>

        <TextView
            android:id="@+id/one_ship_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="22dp"
            android:textColor="@color/app_name_in_menu"
            android:text="4"
            android:textSize="32sp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/two_ship_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/app_name_in_menu"
            android:text="3"
            android:textSize="32sp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/three_ship_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/app_name_in_menu"
            android:text="2"
            android:textSize="32sp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/four_ship_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/app_name_in_menu"
            android:text="1"
            android:textSize="32sp"
            android:layout_marginTop="8dp"/>

    </GridLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp">
    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recyclerView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="onResetClick"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/reset"
        android:textColor="@color/lines_for_battle_field"
        android:textSize="30sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lines_for_battle_field"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginTop="19dp"
        android:id="@+id/ok_btn"
        android:layout_below="@+id/reset_btn"
        android:layout_alignStart="@+id/reset_btn"
        android:text="@string/ok"
        android:textSize="30sp"
        android:onClick="onOkClick"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>